welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:15: error: not found: value vuBiscuit
  while (!vuBiscuit){
          ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
  while (!vuBiscuit){
  ^